# cosim4j

./: .gitignore  Jenkinsfile  LICENSE  README.md  build.gradle  conanfile.py  conanfile.txt  install-cse.sh  run_conan_install.sh  settings.gradle
.dockerfiles/: Dockerfile.build
.github/workflows/: gradle.yml
core/: build.gradle
core/src/main/kotlin/com/opensimulationplatform/cosim/: CosimError.kt  CosimExecution.kt  CosimLogLevel.kt  CosimModelDescription.kt  CosimSamples.kt  CosimSlave.kt  CosimVariableDescription.kt  manipulators.kt  observers.kt
core/src/main/kotlin/com/opensimulationplatform/util/: osutil.kt  ssputil.kt
core/src/main/kotlin/org/osp/cosim/: CosimError.kt  CosimExecution.kt  CosimLogLevel.kt  CosimModelDescription.kt  CosimSamples.kt  CosimSlave.kt  CosimVariableDescription.kt  manipulators.kt  observers.kt
core/src/main/kotlin/org/osp/cse/: CseError.kt  CseExecution.kt  CseExecutionStatus.kt  CseJvmSlave.kt  CseModelDescription.kt  CseSamples.kt  CseSlave.kt  CseSlaveInfo.kt  CseVariableDescription.kt  JvmSlave.kt  enums.kt  manipulators.kt  observers.kt
core/src/main/kotlin/org/osp/util/: osutil.kt  ssputil.kt
core/src/main/resources/native/win64/: csecorec.lib
core/src/test/java/com/opensimulationplatform/cosim/: Demo.java  TestCallback.java
core/src/test/java/org/osp/cosim/: Demo.java  (+1 more)
core/src/test/resources/msmi/: OspSystemStructure.xml
core/src/test/resources/ssp/demo/: SystemStructure.ssd  demo.ssp
cosim4j-native/: .clang-format  CMakeLists.txt  build.gradle  conanfile.txt  run_conan_install.sh
cosim4j-native/include/: cosim.h
cosim4j-native/src/: CMakeLists.txt  cosim.cpp  jvm_slave.cpp  model_description_parser.cpp  step_event_listener.cpp  thread_worker.cpp
cosim4j-native/src/cosim/: cosim_execution_s.hpp  cosim_observer_s.hpp  cosim_slave_s.hpp  execution_status_helper.hpp  jni_helper.hpp  jvm_slave.hpp  model_description_helper.hpp  model_description_parser.hpp  samples_helper.hpp  slave_infos_helper.hpp  step_event_listener.hpp  thread_worker.hpp  unit_conversion.hpp
cosim4j-native/src/jni/: connection.cpp  error.cpp  execution.cpp  initial.cpp  logging.cpp  manipulator.cpp  observer.cpp  samples.cpp  slave.cpp
cpp/cse-core4j/: CMakeLists.txt  conanfile.txt  run_conan_install.sh
cpp/cse-core4j-native/: .clang-format  conanfile.txt  run_conan_install.sh
cpp/cse-core4j-native/src/: CMakeLists.txt
cpp/cse-core4j-native/src/cse/: jni_helper.hpp  model_description_parser.hpp
cpp/cse-core4j-native/src/jni/: observer.cpp
cpp/cse-core4j/src/: CMakeLists.txt  Fmi2Slave.py  jvm_slave.cpp  model.py  model_description_parser.cpp  python_model.cpp  python_slave.cpp  python_test.cpp  python_uri_sub_resolver.cpp  step_event_listener.cpp
cpp/cse-core4j/src/cse/: cse_observer_s.hpp  cse_slave_s.hpp  error_helper.hpp  jni_helper.hpp  jvm_helper.hpp  jvm_slave.hpp  model_description_helper.hpp  py_exception.hpp  py_state.hpp  python_model.hpp  python_slave.hpp  python_uri_sub_resolver.hpp  slave_infos_helper.hpp  step_event_listener.hpp
cpp/cse-core4j/src/jni/: capabilities.cpp  error.cpp  execution.cpp  initial.cpp  logging.cpp  slave.cpp
cse-core4j-native/: CMakeLists.txt  build.gradle  conanfile.txt
cse-core4j-native/src/: CMakeLists.txt  jvm_slave.cpp  model_description_parser.cpp
cse-core4j-native/src/cse/: cse_execution_s.hpp  cse_slave_s.hpp  execution_status_helper.hpp  jni_helper.hpp  jvm_slave.hpp  model_description_helper.hpp  samples_helper.hpp  slave_infos_helper.hpp
cse-core4j-native/src/jni/: error.cpp  execution.cpp  manipulator.cpp  samples.cpp  slave.cpp
cse/lib/: csecorec.lib  csecorecpp.lib
csecorejni/: CMakeLists.txt  conanfile.py  run_conan_install.sh
csecorejni/include/: jniwrapper.hpp
csecorejni/src/: CMakeLists.txt  cse.cpp  jniwrapper.cpp
gradle/: bintraypublish.gradle  mavenpublish.gradle  mavenpublishnative.gradle
gradle/wrapper/: gradle-wrapper.properties
java/cse-core4j/: build.gradle
java/cse-core4j/.github/workflows/: gradle.yml
java/cse-core4j/core/: build.gradle
java/cse-core4j/gradle/: mavenpublish.gradle
java/cse-core4j/natives-linux/: build.gradle
native/: CMakeLists.txt  build.gradle  conanfile.txt  run_conan_install.sh
native/include/cse/: corejni.hpp
native/lib/win64/: csecorec.lib
native/src/: CMakeLists.txt  connection.cpp  corejni.cpp  initial.cpp  jvm_slave.cpp  observer.cpp  samples.cpp  step_event_listener.cpp  thread_worker.cpp
native/src/cse/: cse_execution_s.hpp  cse_slave_s.hpp  cse_structs.hpp  error_helper.hpp  execution_status_fields.hpp  execution_status_helper.hpp  jvm_helper.hpp  jvm_slave.hpp  model_description_helper.hpp  samples_fields.hpp  samples_helper.hpp  slave_infos_helper.hpp  step_event_listener.hpp  structs.hpp  thread_worker.hpp  unit_conversion.hpp
native/src/jni/: execution.cpp  manipulator.cpp  observer.cpp  slave.cpp
native/src/main/cpp/: CseExecutionStatusFields.hpp  cse.cpp  cse_jni_wrapper.cpp
native/src/main/headers/: cse.h  cse_samples_direct_fields.hpp  cse_samples_fields.hpp
native/src/main/public/: cse_jni_wrapper.hpp
natives-linux/: build.gradle
natives-linux/src/main/resources/native/linux/: libboost_atomic.so.1.71.0  libboost_chrono.so.1.66.0  libboost_chrono.so.1.71.0  libboost_context.so.1.66.0  libboost_context.so.1.71.0  libboost_date_time.so.1.71.0  libboost_fiber.so.1.71.0  libboost_filesystem.so.1.71.0  libboost_log.so.1.66.0  libboost_log.so.1.71.0  libboost_log_setup.so.1.71.0  libboost_program_options.so.1.71.0  libboost_regex.so.1.71.0  libboost_system.so.1.71.0  libboost_thread.so.1.66.0  libboost_thread.so.1.71.0
natives-win/: build.gradle
src/main/cpp/: cse.cpp
src/main/kotlin/org/osp/: osutil.kt
src/main/kotlin/org/osp/cse/: CseErrorCode.kt  CseExecution.kt  CseExecutionState.kt  CseExecutionStatus.kt  CseSamples.kt  CseSamplesDirect.kt  CseSlave.kt  CseSlaveInfo.kt  observers.kt
src/main/kotlin/org/osp/util/: bufferutil.kt  osutil.kt
src/test/java/org/osp/cse/: Demo.java  TestFMUs.java
src/test/kotlin/org/osp/cse/: CseExecutionTest.kt  PerformanceTest.kt
(+67 files in other folders)
